switch to new quantifier elimination